xserver-xorg-input-evdev (1:2.3.2-5) UNRELEASED; urgency=low

  * Install 05-evdev.conf in /usr/lib/X11/xorg.conf.d.
  * Remove 65-xorg-evdev.rules, obsoleted by the above.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Sun, 21 Mar 2010 20:51:38 +0200

xserver-xorg-input-evdev (1:2.3.2-4) unstable; urgency=low

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Remove myself from Uploaders
  * 65-xorg-evdev.rules: only set x11_driver for event devices.

  [ Robert Hooker ]
  * Build xserver-xorg-input-evdev-dev on arch: all.

  [ Cyril Brulebois ]
  * Add udeb needed for the graphical installer:
    xserver-xorg-input-evdev-udeb.
  * Bump Standards-Version from 3.8.3 to 3.8.4 (no changes needed).
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 12 Mar 2010 01:02:58 +0100

xserver-xorg-input-evdev (1:2.3.2-3) unstable; urgency=low

  * 65-xorg-evdev.rules: instead of blacklisting joysticks, explicitly
    whitelist keyboards, mice, touchscreens and touchpads (closes: #564219).
    We'll need a better solution, but this should do for now.
  * No need to test for linux in postinst, this package only exists on linux.

 -- Julien Cristau <jcristau@debian.org>  Tue, 12 Jan 2010 10:36:54 +0000

xserver-xorg-input-evdev (1:2.3.2-2) unstable; urgency=low

  [ Timo Aaltonen ]
  * evdev.rules: Skip joysticks, since using evdev for those is
    generally considered as a bad idea. Use -joystick instead.

  [ Julien Cristau ]
  * evdev.rules: Match on ID_INPUT instead of device name + subsystem.
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 07 Jan 2010 20:21:57 +0000

xserver-xorg-input-evdev (1:2.3.2-1) experimental; urgency=low

  [ Timo Aaltonen ]
  * Build against Xserver 1.7.
  * Run udevadm trigger on postinst, and depend on udev [linux-any].
  * Add xserver-xorg-input-evdev-dev for the header and .pc files.

  [ Julien Cristau ]