@@ -24,7 +24,6 @@ Vcs-Browser: http://git.debian.org/?p=pkg-xorg/driver/xserver-xorg-input-evdev.g
 Package: xserver-xorg-input-evdev
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${xserver:Depends},
- udev [linux-any],
 Provides: ${xinpdriver:Provides}
 Replaces: xserver-xorg (<< 6.8.2-35)
 Description: X.Org X server -- evdev input driver
