@@ -2,6 +2,7 @@ xserver-xorg-input-evdev (1:2.3.2-5) UNRELEASED; urgency=low
 
   * Install 05-evdev.conf in /usr/lib/X11/xorg.conf.d.
   * Remove 65-xorg-evdev.rules, obsoleted by the above.
+  * Drop the postinst, and don't depend on udev.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Sun, 21 Mar 2010 20:51:38 +0200
 
